# llm-compression

./: .gitignore  .pre-commit-config.yaml  README.md  dale.html  dale.json  dale.py  lora_test.py  post-compression.json  pre-compression(1).json  pruned_mlp__plus_attention_heads_profile_result.json  pruned_mlp_profile_result.json  pruned_model_profile_result.json  pruned_profile_result.json  pyproject.toml  quantized_n_pruned_model_profiler_result.json  test.json  test.py  test2.json  uncompressed_profile_result.json
src/: main.py  qwen2.py
src/core/analysis/profiling/: __init__.py  hardware_profiler.py  llm_profiler.py  profiler.py
src/core/analysis/profiling/models/hardware/: __init__.py  cpu_info.py  hardware_info.py  nvidia_gpu_info.py  ram_info.py
src/core/analysis/profiling/models/llm/: __init__.py  analyze_connections.py  architecture_info.py  attention_layers_analyse_info.py  connection_analysis_info.py  estimate_memory.py  inference_time_info.py  layer_connection_info.py  llm_info.py  measure_inference_time.py  memory_estimate.py  memory_usage_info.py  model_sumary.py  parameter_info.py
src/core/analysis/profiling/models/profiler/: complete_profile_output.py  llm_profile_options.py
src/core/compression/engine/calibration/: interface.py
src/core/compression/engine/techniques/base/: base_compression_technique.py
src/core/compression/engine/techniques/prune/: interface.py
src/core/exceptions/: __init__.py  platform_not_supported.py
src/core/orchestration/workflow/: compression_workflow.py
(+2 files in other folders)
