[project]
name = "llm-compression"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
