[project]
name = "llm-compression"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "autoawq>=0.2.9",
    "bitsandbytes>=0.48.2",
    "loguru>=0.7.3",
    "optimum>=2.0.0",
    "peft>=0.17.1",
    "protobuf>=6.33.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "torchao>=0.14.1",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
